[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-test-toolkit"
version = "0.1.0"
description = "A plugin-based ecosystem of tools for telecom and 5G test engineers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "gbvk312"}
]
keywords = ["telecom", "5g", "testing", "automation", "gnodeb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
all = [
    "pandas>=1.5",
    "jinja2>=3.0",
    "streamlit>=1.20",
    "plotly>=5.0",
]
dashboard = [
    "streamlit>=1.20",
    "plotly>=5.0",
    "pandas>=1.5",
]
reporting = [
    "jinja2>=3.0",
    "pandas>=1.5",
]

[project.scripts]
ttt = "ttt.cli:cli"

[project.entry-points."ttt.plugins"]
testwatch = "ttt.plugins.testwatch_plugin:TestWatchPlugin"
log-analyzer = "ttt.plugins.log_analyzer_plugin:LogAnalyzerPlugin"
testscope = "ttt.plugins.testscope_plugin:TestScopePlugin"
flakiness-scorer = "ttt.plugins.flakiness_plugin:FlakinessPlugin"
report-generator = "ttt.plugins.report_gen_plugin:ReportGenPlugin"
dashboard = "ttt.plugins.dashboard_plugin:DashboardPlugin"

[tool.setuptools.packages.find]
include = ["ttt*"]
