[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-test-toolkit"
version = "0.1.0"
description = "A plugin-based ecosystem of tools for telecom and 5G test engineers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "gbvk312"}
]
keywords = ["telecom", "5g", "testing", "automation", "gnodeb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
all = [
    "pandas>=1.5",
    "jinja2>=3.0",
    "streamlit>=1.20",
    "plotly>=5.0",
]
dashboard = [
    "streamlit>=1.20",
    "plotly>=5.0",
    "pandas>=1.5",
]
reporting = [
    "jinja2>=3.0",
    "pandas>=1.5",
]

[project.scripts]
ttt = "ttt.cli:cli"

[project.entry-points."ttt.plugins"]
# Plugins are now dynamically installed by other repositories via this entry group

[tool.setuptools.packages.find]
include = ["ttt*"]


[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
